--- a/src/app/DemoPages/Material/Datatable/table/table.component.html
+++ b/src/app/DemoPages/Material/Datatable/table/table.component.html
@@ -33,12 +33,12 @@
 </div>
 
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
- 
+  <table mat-table [dataSource]="dataSource" class="table-responsive mat-elevation-z8" matSort>
+
     <!-- ID Column -->
-    <ng-container *ngFor="let columna of columnas" matColumnDef="{{columna.name}}">
+    <ng-container *ngFor="let columna of columnas" matColumnDef="{{columna.name}}" style="text-align:center">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> {{columna.titulo}}</th>
-    <td mat-cell *matCellDef="let row"> {{row[columna.name]}} </td>
+    <td (click)="openDialog()" mat-cell *matCellDef="let row"> {{row[columna.name]}} </td>
     </ng-container>
 
 
@@ -50,5 +50,6 @@
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
 </table>
+
 
 <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
